# fpt-cli

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  Cargo.toml  README.md  README_zh.md  distribution.toml  justfile  release-please-config.json  vx.toml
.codebuddy/automations/fpt/: memory.md
.codebuddy/automations/fpt-cli/: memory.md
.codebuddy/automations/fpt-cli-pr64/: memory.md
.codebuddy/memory/: 2026-03-14.md  2026-03-18.md  2026-03-19.md
.config/: hakari.toml
.github/workflows/: ci.yml  clawhub.yml  generate-skills.yml  release-please.yml  release.yml
.workbuddy/memory/: 2026-03-26.md
crates/fpt-cli/: CHANGELOG.md  Cargo.toml
crates/fpt-cli/src/: cli.rs  config.rs  main.rs  output.rs  runner.rs  self_update.rs
crates/fpt-cli/src/cli/: commands.rs  common.rs  connection.rs
crates/fpt-cli/tests/: batch_cli_contract_tests.rs  cli_contract_tests.rs  self_update_contract_tests.rs
crates/fpt-core/: Cargo.toml
crates/fpt-core/src/: error.rs  io.rs  lib.rs  model.rs  spec.rs
crates/fpt-domain/: Cargo.toml
crates/fpt-domain/src/: app.rs  capability.rs  config.rs  filter_dsl.rs  lib.rs  transport.rs
crates/fpt-domain/src/app/: activity.rs  auth.rs  batch.rs  entity.rs  find.rs  follow.rs  hierarchy.rs  license.rs  note.rs  query_helpers.rs  query_utils.rs  schedule.rs  schema.rs  server.rs  summarize.rs  upload.rs  user.rs  work_schedule.rs
crates/fpt-domain/src/capability/: activity.rs  auth.rs  core.rs  entity.rs  follow.rs  hierarchy.rs  license.rs  note.rs  preferences.rs  schedule.rs  schema.rs  self_update.rs  server.rs  upload.rs  user.rs  work_schedule.rs
crates/fpt-domain/tests/: app_command_tests.rs  auth_config_tests.rs  batch_upsert_checkpoint_tests.rs  entity_link_filter_tests.rs  entity_path_tests.rs  filter_dsl_tests.rs  find_params_tests.rs  rest_transport_tests.rs
scripts/: install.ps1  install.sh  local_count_projects.ps1  package_openclaw_skill.py  release_metadata.py
skills/fpt-cli-openclaw/: SKILL.md
skills/fpt-cli-openclaw/references/: install-and-auth.md
workspace-hack/: Cargo.toml
