[workspace]
members = [
  "crates/fpt-cli",
  "crates/fpt-core",
  "crates/fpt-domain",
  "workspace-hack",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.15"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
assert_cmd = "2.0.16"
async-trait = "0.1.88"
clap = { version = "4.5.32", features = ["derive"] }
flate2 = "1.1.0"
futures = "0.3.31"
predicates = "3.1.3"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rstest = "0.26.0"
self-replace = "1.5.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tar = "0.4.45"
tempfile = "3.18.0"
toon-format = { git = "https://github.com/toon-format/toon-rust", package = "toon-format" }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5.4"
zip = { version = "8.0.0", default-features = false, features = ["deflate"] }
