[package]
name = "fpt-domain"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }


[dependencies]
async-trait = { workspace = true }
fpt-core = { path = "../fpt-core" }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
httpmock = "0.7.0"
rstest = { workspace = true }
tokio = { workspace = true }


