[package]
name = "fpt-domain"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }


[dependencies]
async-trait = { workspace = true }
fpt-core = { path = "../fpt-core" }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
httpmock = "0.7.0"
rstest = { workspace = true }
tokio = { workspace = true }


